fixed checklist menu overflow disabled history log for ICS import webcal cron

--- a/www/go/modules/community/calendar/views/goui/style/style.scss
+++ b/www/go/modules/community/calendar/views/goui/style/style.scss
@@ -782,7 +782,7 @@ $timeMargin: dp(72);
 		&.selected {
 			background-color: $colorSelectedRowInactive;
 		}
-		menu{width:0;}
+		menu{width:0;overflow:hidden;}
 		&:hover menu, &:focus-within menu{width:auto;}
 	}
 	.goui-form-field .wrap menu.goui-toolbar {
